Work on mobile fixes...

--- a/app/assets/stylesheets/calculator.scss
+++ b/app/assets/stylesheets/calculator.scss
@@ -189,15 +189,13 @@ div.jumbotron.wider {
  */
 
 .slider {
-  width: 100%;
+  width: 200px;
 }
-/*
 @media screen and (max-device-width: 1024px) {
   input.slider {
-    width: 100%;
+    width: 100px;
   }
 }
-*/
 
 /*
  * Footer
